# ai-coding-drill-python

./: .gitignore  .mcp.json  .npmrc  .syncpackrc.ts  CONTRIBUTING.md  LICENSE  README.md  SYSTEM_OVERVIEW.md  biome.jsonc  commitlint.config.mjs  commitlint.config.ts  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  knip.config.ts  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.jsonc
.claude/: CLAUDE.md  launch.json
apps/api/: .env.example  README.md  alembic.ini  health-router-anatomy.md  openapi.json  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 07cfdec5b271_add_progress_step_to_generation_requests.py  0bf1836cc8cf_set_string_length_constraints_on_users_.py  1d8a244b8bd8_add_problems_generation_requests_jobs_.py  307fd17405d6_add_attempt_errors_to_jobs.py  3b77dece861e_create_users_and_auth_providers_tables.py  54b902247e80_add_retry_of_failure_reason_completed_.py  a1c5e9d3f742_align_schema_with_data_model_review.py  ae67f52f4cc6_add_problems_list_partial_index_for_r1_4.py  e62bab8e24c2_create_health_check_table.py  f032cf226a1f_add_submissions_table_for_r1_4.py
apps/api/app/: README.md  main.py
apps/api/app/core/: README.md  config.py  cookies.py  csrf.py  exceptions.py  http_client.py  redis.py  session.py  state_store.py
apps/api/app/db/: README.md  base.py  session.py
apps/api/app/models/: README.md  __init__.py  auth_providers.py  generation_requests.py  health_check.py  jobs.py  problems.py  submissions.py  users.py
apps/api/app/observability/: README.md
apps/api/app/repositories/: README.md  auth_providers.py  generation_requests.py  jobs.py  me.py  me_generations.py  problems.py  submissions.py  users.py
apps/api/app/routers/: README.md  auth.py  health.py  me.py  probes.py  problems.py  submissions.py
apps/api/app/schemas/: README.md  auth.py  health.py  me.py  me_generations.py  problems.py  submissions.py
apps/api/app/services/: README.md  auth.py  github_oauth.py  me.py  me_generations.py  problem_generation.py  problems.py  submissions.py
apps/api/job-schemas/: grading.schema.json  health-check.schema.json  problem-generation.schema.json
apps/api/scripts/: export_job_schemas.py  export_openapi.py  generate_worker_jobtypes.py
apps/api/tests/: conftest.py  test_health.py  test_probes.py
apps/api/tests/integration/: _factories.py  _helpers.py  conftest.py  test_auth_api.py  test_auth_repositories.py  test_generation_requests_repository.py  test_me_api.py  test_me_generations_api.py  test_me_generations_rate_limit.py  test_me_generations_repository.py  test_me_repository.py  test_problem_generation_api.py  test_problems_api.py  test_problems_rate_limit.py  test_submissions_api.py  test_submissions_rate_limit.py  test_submissions_repository.py
(+453 files in other folders)
