[project]
name = "api"
version = "0.1.0"
description = "AI Coding Drill - FastAPI backend (auth / problem CRUD / job enqueue)"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

# ============================================================================
# ruff（lint + format、ADR 0020）
# ----------------------------------------------------------------------------
# target-version はランタイムと揃える（mise.toml の python pin と同期）。
# select は Python ecosystem の主要ルールセットを採用：
#   E/W = pycodestyle、F = pyflakes、I = isort、UP = pyupgrade、
#   B = flake8-bugbear、SIM = flake8-simplify、N = pep8-naming
# ============================================================================
[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ============================================================================
# pyright（型チェック、ADR 0020）
# ----------------------------------------------------------------------------
# 開始は basic で運用、コード成熟に合わせて strict へ段階的に引き上げる。
# ============================================================================
[tool.pyright]
include = ["app", "tests"]
exclude = [".venv", "**/__pycache__", "alembic/versions"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false

# ============================================================================
# pytest（ADR 0038）
# ----------------------------------------------------------------------------
# integration マーカーで「DB 必要なテスト」を分離（lefthook の pre-push で
# Postgres 未起動時に "not integration" だけ実行する graceful skip に使用）。
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires running Postgres (skipped when DB is unavailable)",
]

# ============================================================================
# deptry（依存衛生、ADR 0020）
# ----------------------------------------------------------------------------
# 未宣言 / 未使用 / transitive 依存を検出する。
# ============================================================================
[tool.deptry]
extend_exclude = ["alembic/versions"]
